# agent-101

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SYLLABUS.md  VIRAL.md  agent.py  pyproject.toml
.github/workflows/: ci.yml
about/: index.html  main.js  style.css
assets/: README.md  build_visuals.py  launch.tape  quick-demo.tape
assets/ads/: README.md
assets/share/: README.md
chapters/: ch00_welcome.md  ch00_welcome.py  ch01_raw_call.md  ch01_raw_call.py  ch02_messages_array.md  ch02_messages_array.py  ch03_stop_reasons.md  ch03_stop_reasons.py  ch04_one_tool.md  ch04_one_tool.py  ch05_the_loop.md  ch05_the_loop.py  ch06_parallel_tools.md  ch06_parallel_tools.py  ch07_errors.md  ch07_errors.py  ch08_system_prompts.md  ch08_system_prompts.py  ch08b_observability.md  ch08b_observability.py  ch08c_prompt_caching.md  ch08c_prompt_caching.py  ch09_sessions.md  ch09_sessions.py  ch10_compaction.md  ch10_compaction.py  ch11_subagents.md  ch11_subagents.py  ch12_skills.md  ch12_skills.py  ch13_mcp_wire.md  ch13_mcp_wire.py  ch14_mcp_agent.md  ch14_mcp_agent.py  ch15_streaming_text.md  ch15_streaming_text.py  ch16_streaming_tools.md  ch16_streaming_tools.py  ch17_multi_provider.md  ch17_multi_provider.py
docs/: ADAPTING.md  FAQ.md  LAUNCH.md  WISHLIST.md
mcp_servers/: calculator_server.py
microsite/: README.md  build_site.py
runs/: speedrun.sh
scripts/: build_share_assets.py  render_demo_gif.py
skills/haiku-master/: SKILL.md
skills/landing-page/: SKILL.md
tests/: test_agent.py  test_agent_loop.py  test_mcp_wire.py  test_multi_provider.py  test_session.py  test_skills.py  test_smoke.py
